--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
+<head>
 <title>Condonato DEV</title>
+<style>
+body {
+background-image: url("9EEE44A0-CF8E-4806-BB07-DAD3DE0D898E.jpeg")
+</style>
+</head>
