--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <title>Condonato DEV</title>
 <style>
 body {
-background-image: url("9EEE44A0-CF8E-4806-BB07-DAD3DE0D898E.jpeg")
+background-image: url("2F23F8C2-F636-4F73-B1A2-51244BA16829.gif")
 </style>
 </head>
