--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <title>Condonato DEV</title>
 <style>
 body {
-background-image: url("2F23F8C2-F636-4F73-B1A2-51244BA16829.gif")
+width: 100%;
+  height: 100%;
+  font-family: "Anonymous Pro", sans-serif;
+   background-image: url("2F23F8C2-F636-4F73-B1A2-51244BA16829.gif")
+}
 </style>
 </head>
