--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <head>
 <title>Condonato DEV</title>
 <style>
+h1 {
+    text-align: center;
+}
+
 body {
 width: 100%;
   height: 100%;
@@ -9,3 +13,6 @@ width: 100%;
 }
 </style>
 </head>
+<body>
+<h1>Condonato DEV</h1>
+</body>
