--- a/index.html
+++ b/index.html
@@ -14,8 +14,17 @@ width: 100%;
   font-family: "Anonymous Pro", sans-serif;
    background-image: url("2F23F8C2-F636-4F73-B1A2-51244BA16829.gif")
 }
+.langs{
+text-align: left;
+color: red;
+width: 110%;
+height: 110%;
+}
 </style>
 </head>
 <body>
 <h1>Condonato DEV</h1>
+<div class="langs">
+<h4>Python, PHP & JavaScript</h4>
+</div>
 </body>
