--- a/index.html
+++ b/index.html
@@ -24,7 +24,5 @@ text-align: left;
 </head>
 <body>
 <h1>Condonato DEV</h1>
-<div class="langs">
-<h4>Python, PHP & JavaScript</h4>
-</div>
+<h4>Python, PHP & JavaScript <span class="langs"></span></h4>
 </body>
