--- a/index.html
+++ b/index.html
@@ -24,5 +24,5 @@ text-align: left;
 </head>
 <body>
 <h1>Condonato DEV</h1>
-<h4>Python, PHP & JavaScript <span class="langs"></span></h4>
+<h4><span class="langs"> Python, PHP & JavaScript</span></h4>
 </body>
