--- a/index.html
+++ b/index.html
@@ -14,14 +14,9 @@ width: 100%;
   font-family: "Anonymous Pro", sans-serif;
    background-image: url("2F23F8C2-F636-4F73-B1A2-51244BA16829.gif")
 }
-.langs{
- color: red;
-  width: 110%;
-   height: 110%;
-}
 </style>
 </head>
 <body>
 <h1>Condonato DEV</h1>
-<h3><span class="langs"> Python, PHP & JavaScript</span></h3>
+<h3>Python, PHP & JavaScript</h3>
 </body>
