--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<html>
 <head>
 <title>Condonato DEV</title>
 <style>
@@ -18,6 +19,7 @@ width: 100%;
 </head>
 <body>
 <h1>Condonato DEV</h1>
+<div></div>
 <h3>Python, PHP & JavaScript</h3>
-<h3>h</h3>
 </body>
+</html>
