--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@ body {
 width: 100%;
   height: 100%;
   font-family: "Anonymous Pro", sans-serif;
-   background-image: url("2F23F8C2-F636-4F73-B1A2-51244BA16829.gif")
+   background-image: url("2F23F8C2-F636-4F73-B1A2-51244BA16829.gif");
 }
 </style>
 </head>
 <body>
 <h1>Condonato DEV</h1>
-<div></div>
 <h3>Python, PHP & JavaScript</h3>
 </body>
 </html>
