--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ width: 100%;
   height: 100%;
   font-family: "Anonymous Pro", sans-serif;
 
-//2F23F8C2-F636-4F73-B1A2-51244BA16829.gif
+<!--2F23F8C2-F636-4F73-B1A2-51244BA16829.gif-->
 
    background-image: url("9EEE44A0-CF8E-4806-BB07-DAD3DE0D898E.jpeg");
     background-repeat: repeat;
