--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@ h1 {
       width: 130%;
        height: 130%;
 }
-
+h3 {
+ color: red;
+}
 body {
 width: 100%;
   height: 100%;
@@ -22,6 +24,6 @@ width: 100%;
 </head>
 <body>
 <h1>Condonato DEV</h1>
-<h1>Python, PHP & JavaScript</h1>
+<h3>Python, PHP & JavaScript</h3>
 </body>
 </html>
