--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Condonato DEV</title>
-<style>
+<!--<style>
 h1 {
     text-align: center;
      color: red;
@@ -15,7 +15,7 @@ body {
    background-image: url("2F23F8C2-F636-4F73-B1A2-51244BA16829.gif");
     background-repeat: repeat;
 }
-</style>
+</style>-->
 </head>
 <body>
 <h1>Condonato DEV</h1>
