--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 <title>Condonato DEV</title>
-<!--<style>
-h1 {
+<style>
+<!--h1 {
     text-align: center;
      color: red;
       width: 130%;
@@ -10,12 +10,12 @@ h1 {
 }
 h3 {
  color: red;
-}
+}-->
 body {
    background-image: url("2F23F8C2-F636-4F73-B1A2-51244BA16829.gif");
     background-repeat: repeat;
 }
-</style>-->
+</style>
 </head>
 <body>
 <h1>Condonato DEV</h1>
