--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ body {
 </style>
 </head>
 <body>
-<h1> style="color:red;text-align:center;width:130%;heigt:130%;>"Condonato DEV</h1>
+<h1> style="color:red;text-align:center;width:130%;heigth:130%;>"Condonato DEV</h1>
 <h3>Python, PHP & JavaScript</h3>
 
 
