--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Condonato DEV</title>
 </head>
 <body style="background-image:url("2F23F8C2-F636-4F73-B1A2-51244BA16829.gif");background-repeat:repeat">
-<h1> style="color:red;text-align:center"> Condonato DEV</h1>
+<h1 style="color:red;text-align:center"> Condonato DEV</h1>
 <h3>Python, PHP & JavaScript</h3>
 
 
