--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <html>
 <head>
 <title>Condonato DEV</title>
+<style>
+body{
+background-image:url("2F23F8C2-F636-4F73-B1A2-51244BA16829.gif");
+background-repeat:repeat
+}
+</style>
 </head>
-<body style="background-image:url("2F23F8C2-F636-4F73-B1A2-51244BA16829.gif");background-repeat:repeat">
+<body>
 <h1 style="color:red;text-align:center"> Condonato DEV</h1>
 <h3>Python, PHP & JavaScript</h3>
 
