--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ background-repeat:repeat
 </head>
 <body>
 <h1 style="color:red;text-align:center"> Condonato DEV</h1>
-<h3>Python, PHP & JavaScript</h3>
+<h3 style="color:red;text-align:left">Python, PHP & JavaScript</h3>
 
 
 </body>
