--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ background-repeat:repeat
     height: 50px;
     border: none;
     outline: none;
-    color: #fff;
+    color: red;
     background: #111;
     cursor: pointer;
     position: relative;
@@ -20,7 +20,7 @@ background-repeat:repeat
 
 .glow-on-hover:before {
     content: '';
-    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+    background: green;
     position: absolute;
     top: -2px;
     left:-2px;
@@ -53,7 +53,7 @@ background-repeat:repeat
     position: absolute;
     width: 100%;
     height: 100%;
-    background: #111;
+    background: orange;
     left: 0;
     top: 0;
     border-radius: 10px;
