--- a/index.html
+++ b/index.html
@@ -69,6 +69,6 @@ background-repeat:repeat
 <body>
 <h1 style="color:red;text-align:center"> Condonato DEV</h1>
 <h3 style="color:red;text-align:left">Python, PHP & JavaScript</h3>
-<button class="glow-on-hover" type="button"><a href="https://t.me/Condonato target="_blank">Contatto Telegram</a></button>
+<button class="glow-on-hover" type="button"><a href="https://t.me/Condonato" target="_blank">Contatto Telegram</a></button>
 </body>
 </html>
