--- a/index.html
+++ b/index.html
@@ -25,5 +25,7 @@ background-repeat:repeat
 <h1 style="color:red;text-align:center"> Condonato DEV</h1>
 <h3 style="color:red;text-align:left">Python, PHP & JavaScript</h3>
 <button class="glow-on-hover" type="button"><a href="https://t.me/Condonato" target="_blank">Contatto Telegram</a></button>
+<button class="glow-on-hover" type="button"><a href="https://GitHub.com/condonato" target="_blank">GitHub</a></button>
+<button class="glow-on-hover" type="button"><a href="https://t.me/CondonatoProjects" target="_blank">Progetti</a></button>
 </body>
 </html>
