--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@ background-repeat:repeat
 <button class="glow-on-hover" type="button"><a href="https://t.me/Condonato" target="_blank">Contatto Telegram</a></button>
 <button class="glow-on-hover" type="button"><a href="https://GitHub.com/condonato" target="_blank">GitHub</a></button>
 <button class="glow-on-hover" type="button"><a href="https://t.me/CondonatoProjects" target="_blank">Progetti</a></button>
+<button class="glow-on-hover" type="button"><a href="https://paypal.me/NewImAle2" target="_blank">Dona</a></button>
 </body>
 </html>
